- clean up deprecated warnings